<resources>
    <string name="app_name">Tic Tac Woah</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gameplay">GameplayActivity</string>

    <string name="shape_spinner_text">Shape</string>
    <string name="time_limit_spinner_text">Time Limit</string>
    <string name="AI_level_spinner_text">AI Level</string>
    <string name="number_of_AI_spinner_text">AI</string>
    <string name="number_of_players_text">Other Players</string>
    <string name="play_button_text">Play!</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>

    <string name="help_text_page1"><![CDATA[
        \t Tic Tac Woah is a complex and advanced game based on the famous Tic Tac Toe game. This game
        can be played by 2-4 players. Each player gets different sized pieces like circles or
        triangles. The sizes are small, medium and large. \n\n
        \t There are three ways to win, scroll to view more info on this. \n
    ]]></string>
    <string name="help_text_page2"><![CDATA[
        \t One way to win is to have 3 concentric circles in the same spot. \n\n
    ]]></string>
    <string name="help_text_page3"><![CDATA[
        \t Another way to win is to have 3 same sized pieces in a row or column or diagonal. \n\n
    ]]></string>
    <string name="help_text_page4"><![CDATA[
        \t The final way to win is to have 3 different sized pieces in ascending or descending order
        either horizontally, vertically or diagonally. \n\n
    ]]></string>
    <string name="help_title">GAMEPLAY HELP</string>

    <string name="singleplayer_text">Single Player</string>
    <string name="multiplayer_text">Multiplayer</string>
    <string name="hotseat_text">Hotseat</string>
</resources>
