<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_between_spinner_group" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_between_spinner_and_text"
            style="@style/spinner_message"
            android:text="@string/shape_spinner_text" />
        <Spinner
            android:id="@+id/spinner_shape"
            android:layout_width="match_parent"
            style="@style/spinner"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_between_spinner_group" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_between_spinner_and_text"
            style="@style/spinner_message"
            android:text="@string/time_limit_spinner_text" />
        <Spinner
            android:id="@+id/spinner_time_limit"
            android:layout_width="match_parent"
            style="@style/spinner"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_between_spinner_group" >

        <TextView
            android:id="@+id/text_view_AI_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_between_spinner_and_text"
            style="@style/spinner_message"
            android:text="@string/AI_level_spinner_text" />
        <Spinner
            android:id="@+id/spinner_AI_level"
            android:layout_width="match_parent"
            style="@style/spinner"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_between_spinner_group" >

        <TextView
            android:id="@+id/text_view_number_of_AI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_between_spinner_and_text"
            style="@style/spinner_message"
            android:text="@string/number_of_AI_spinner_text" />
        <Spinner
            android:id="@+id/spinner_number_of_AI"
            android:layout_width="match_parent"
            style="@style/spinner"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_between_spinner_group" >

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/play_button_text"/>

    </RelativeLayout>


</LinearLayout>
